even better routing

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -215,7 +215,7 @@
         <dl>
           <dt>Owner</dt>
           <dd class="name">
-            <a class="owner" href="{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit#{{id}}">{{name}}</a>
+            <a class="owner" href="{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit/{{id}}">{{name}}</a>
             {{#nouns}}
               <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
             {{/nouns}}
