--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -40,7 +40,7 @@
   <script type='text/javascript' src='script/monocles.js'></script>
   <script type='text/javascript' src='script/home.js'></script>
 </head>
-<body>
+<body style="margin: 0">
   <div class='header limiter'>
     <a href="/" class='logo'></a>
     <a href="http://www.github.com/maxogden/datacouch"><img class="notification-banner" src="style/images/ribbon.png"></a>
