hook up trending datasets to database

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -443,6 +443,6 @@
   		</table>
   	</div>
 	</script>
-  <img src="http://smalldata.org:9876/spacer.gif">
+  <img src="/analytics.gif">
 </body>
 </html>
