--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -23,7 +23,10 @@
       <div class="project-actions"></div>
       <div class="project-controls"></div>
     </div>
-		<div class="main_content"></div>
+		<div class="main_content">
+		  <div class="left-panel"></div>
+		  <div class="right-panel"></div>
+		</div>
 	</div>
 	
 	<div id="notification-container">
@@ -80,48 +83,62 @@
     <li><a data-action="deleteRow" class="menuAction" href="JavaScript:void(0);">Delete this row</a></li>
   </script>
 
+  <script type='text/mustache' class="sidebarTemplate">
+    <div class="sidebar">
+      <div class="top">        
+        {{#name}}<div class="title">{{name}}</div>{{/name}}
+        {{#description}}<div class="description">{{description}}</div>{{/description}}
+        {{#source}}<div class="datasource"><span class="strong">DATASOURCE:</span>{{source}}</div>{{/source}}
+      </div>
+      <div class="bottom">
+      {{#properties}}
+        <div class="property">
+          <div class="key">{{key}}:</div>
+          <div class="value {{classStyle}}">{{value}}</div>
+        </div>
+      {{/properties}}
+      </div>
+    </div>
+  </script>
   <script type='text/mustache' class="titleTemplate"><span id="project-name-button" class="app-path-section">{{user}}&nbsp;/ {{name}}</span></script>
   <script type='text/mustache' class="bulkTemplate">http://{{host}}/{{db_name}}/_bulk_docs</script>
   <script type='text/mustache' class="generatingTemplate"><div class="loading">Loading...</div></script>
   
   <script type='text/mustache' class="tableContainerTemplate">
-    <div id="right-panel">
-      <div id="tool-panel">
-        <div id="summary-bar">
-          <span id="docCount"></span>
+    <div id="tool-panel">
+      <div id="summary-bar">
+        <span id="docCount"></span>
+      </div>
+      <div id="download">
+      </div>
+    </div>
+    <div id="view-panel">
+      <div class="viewpanel-header">
+        <div class="viewpanel-pagesize">
+          <span>
+            Show:
+          </span>
+          <a href="javascript:{}" class="viewPanel-pagingControls-page action">5</a>
+          <a href="javascript:{}" class="viewPanel-pagingControls-page selected">10</a>
+          <a href="javascript:{}" class="viewPanel-pagingControls-page action">25</a>
+          <a href="javascript:{}" class="viewPanel-pagingControls-page action">50</a>
+          <span>
+            rows
+          </span>
         </div>
-        <div id="download">
+        <div class="viewpanel-sorting">
+        </div>
+        <div class="viewpanel-paging">
+          <a href="javascript:{}" class="first inaction">« first</a>
+          <a href="javascript:{}" class="previous inaction">‹ previous</a>
+          <span class="viewpanel-pagingcount">
+            1 - 10
+          </span>
+          <a href="javascript:{}" class="next action">next ›</a>
+          <a href="javascript:{}" class="last action">last »</a>
         </div>
       </div>
-      <div id="view-panel">
-        <div class="viewpanel-header">
-          <div class="viewpanel-pagesize">
-            <span>
-              Show:
-            </span>
-            <a href="javascript:{}" class="viewPanel-pagingControls-page action">5</a>
-            <a href="javascript:{}" class="viewPanel-pagingControls-page selected">10</a>
-            <a href="javascript:{}" class="viewPanel-pagingControls-page action">25</a>
-            <a href="javascript:{}" class="viewPanel-pagingControls-page action">50</a>
-            <span>
-              rows
-            </span>
-          </div>
-          <div class="viewpanel-sorting">
-          </div>
-          <div class="viewpanel-paging">
-            <a href="javascript:{}" class="first inaction">« first</a>
-            <a href="javascript:{}" class="previous inaction">‹ previous</a>
-            <span class="viewpanel-pagingcount">
-              1 - 10
-            </span>
-            <a href="javascript:{}" class="next action">next ›</a>
-            <a href="javascript:{}" class="last action">last »</a>
-          </div>
-        </div>
-        <div class="data-table-container">
-
-        </div>
+      <div class="data-table-container">
       </div>
     </div>
   </script>
