--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -30,10 +30,17 @@
   (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
   <title>DataCouch | Home</title>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  
   <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
   <link rel='stylesheet' media='all' href='style/reset.css' />
   <link rel='stylesheet' media='all' href='style/home.css' />
   <link rel="stylesheet" href="style/bootstrap.css">
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+  <script type="text/javascript">
+    // google chrome frame
+    CFInstall.check({mode: "overlay", destination: "http://datacouch.com"});
+  </script>
   <script src="https://browserid.org/include.js" type="text/javascript"></script>
   <script type='text/javascript' src='script/deps-min.js'></script>
   <script type='text/javascript' src='script/util.js'></script>
