--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -34,8 +34,10 @@
   <link rel='stylesheet' media='all' href='style/reset.css' />
   <link rel='stylesheet' media='all' href='style/home.css' />
   <link rel="stylesheet" href="style/bootstrap.css">
-  <script src="https://browserid.org/include.js" type="text/javascript"></script>
+  <!-- <script src="https://browserid.org/include.js" type="text/javascript"></script> -->
+  
   <script type='text/javascript' src='script/deps-min.js'></script>
+  <script type='text/javascript' src='script/lib/jquery.oauthpopup.js'></script>
   <script type='text/javascript' src='script/util.js'></script>
   <script type='text/javascript' src='script/monocles.js'></script>
   <script type='text/javascript' src='script/home.js'></script>
