--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -132,17 +132,17 @@
       </a>
     </div>
     <div class="option user_settings">
-      <a href="settings!"><div class="navIcon"></div></a>
+      <a href="#/settings!"><div class="navIcon"></div></a>
     </div>
     <div class="option logout">
-      <a href="logout!"><div class="navIcon"></div></a>
+      <a href="#/logout!"><div class="navIcon"></div></a>
     </div>
   </script>
 
   <script type="text/mustache" class="loginButtonTemplate">
     <div class="right">
       <ul id="landing_nav">
-        <li><a href="login!" class="btn secondary login">Log in with BrowserID&nbsp;<span class="rightarrow icon"></span></a></li>
+        <li><a href="#/login!" class="btn secondary login">Log in with BrowserID&nbsp;<span class="rightarrow icon"></span></a></li>
         <li class="disclaimer">Your email address will be publicly viewable by other users</li>
       </ul>
     </div>
@@ -252,7 +252,7 @@
         <div class="avatar"><a href="#/{{user}}"><img src="{{gravatar_url}}"></a></div>
         {{#description}}<div><p>{{description}}</p></div>{{/description}}
         <div class="datasetActions">
-          {{#loggedIn}}<a href="fork/{{id}}!" class="btn secondary small"><span class="fork icon"></span>Fork dataset</a>{{/loggedIn}}
+          {{#loggedIn}}<a href="#/fork/{{id}}!" class="btn secondary small"><span class="fork icon"></span>Fork dataset</a>{{/loggedIn}}
         </div>
       </li>
     {{/datasets}}
@@ -264,7 +264,7 @@
   </script>
   
   <script type="text/mustache" class="userActionsTemplate">
-    <a href="new!" class="btn primary">
+    <a href="#/new!" class="btn primary">
       + New Dataset
     </a>
   </script>
