--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -158,7 +158,7 @@
     
         <div class="modal-header">
           <h3>Hello {{name}}, Please setup your user profile.</h3>
-          <a href="#/" class="close cancel">×</a>
+          <a href="#/cancel!" class="close cancel">×</a>
         </div>
         <div class="modal-body">
           <div class="clearfix">
@@ -185,7 +185,7 @@
         </div>
         <div class="modal-footer">          
           <input type="submit" class="btn primary" value="Save">
-          <input type="button" class="btn secondary cancel" value="Cancel">
+          <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
           <input type="hidden" name="user" value="{{name}}">
         </div>              
       </form>
@@ -196,7 +196,7 @@
     <form class="profile_setup">
       <div class="modal-header">
         <h3>Editing {{_id}}'s profile.</h3>
-        <a href="#/" class="close cancel">×</a>
+        <a href="#/cancel!" class="close cancel">×</a>
       </div>
       <div class="modal-body">
         <div class="clearfix">
@@ -224,7 +224,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary" value="Save">
-        <a href="#/" class="btn secondary cancel">Cancel</a>
+        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
         <input type="hidden" name="user" value="{{user}}">
       </div>              
     </form>
@@ -273,7 +273,7 @@
     <form class="dataset_setup">
       <div class="modal-header">
         <h3>Create a new dataset</h3>
-        <a href="#/" class="close cancel">×</a>
+        <a href="#/cancel!" class="close cancel">×</a>
       </div>
       <div class="modal-body">
         <h4>Name:</h4>
@@ -284,7 +284,7 @@
       </div>
       <div class="modal-footer">
         <input type="submit" class="btn primary" value="Save">
-        <input type="button" class="btn secondary cancel" value="Cancel">
+        <a href="#/cancel!" class="btn secondary cancel">Cancel</a>
       </div>              
     </form>
   </script>
