--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -139,7 +139,7 @@
   <script type='text/mustache' class="appsTabTemplate">
     <div class="top">
       {{^apps}}<div class="description">You haven't made any apps on top of this data yet.</div>{{/apps}}
-      <a class="browseApps">Browse available apps</a>
+      <a href="#/browse!">Browse available apps</a>
     </div>
     <div class="bottom">
       {{#apps}}
