--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -144,7 +144,7 @@
   <script type="text/mustache" class="loginButtonTemplate">
     <div class="right">
       <ul id="landing_nav">
-        <li><a href="#/login!" class="btn secondary login">Log in with BrowserID&nbsp;<span class="rightarrow icon"></span></a></li>
+        <li><a href="#/login!" class="btn secondary login">Sign in with Twitter&nbsp;<span class="rightarrow icon"></span></a></li>
         <li class="disclaimer">Your email address will be publicly viewable by other users</li>
       </ul>
     </div>
