close login popup after logging in

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -145,7 +145,7 @@
     <div class="right">
       <ul id="landing_nav">
         <li><a href="#/login!" class="btn secondary login">Sign in with Twitter&nbsp;<span class="rightarrow icon"></span></a></li>
-        <li class="disclaimer">Your email address will be publicly viewable by other users</li>
+        <li class="disclaimer">You will then be able to create or fork datasets.</li>
       </ul>
     </div>
   </script>
