--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -44,21 +44,14 @@
 </head>
 <body style="margin: 0">
 
-  <div class='header limiter'>
-    <a href="#/" class='logo'></a>
-    <a href="http://www.github.com/maxogden/datacouch">
-      <img class="notification-banner" src="style/images/ribbon.png">
-    </a>
-  </div>
-  
-  <div class="topbar-wrapper" style="z-index: 5;">
-    <div class="topbar">
-      <div class="fill">
-        <div class="userControls"></div>
-      </div>
+  <div class="header-wrap">
+    <div class='header'>
+      <img class="datacouch-logo" src="images/datacouch-logo.png">
+      <a href="#/" class='logo'></a>
     </div>
   </div>
   
+  <div class="userControls"></div>
   <div class="userButtons"></div>
 
   <div class='bannerContainer'></div>
