add pre-alpha software disclaimer :)

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -57,57 +57,66 @@
   <div class="row bannerContainer"></div>
   
   <div class="container">
+    
+    <div class="alert-message warning" style="margin-top: 10px">
+      <p>
+        <strong>
+          This is pre-alpha software!
+        </strong>
+        Datacouch is still being built and tested. Be aware that your stuff might get deleted randomly! Watch progress <a href="http://github.com/maxogden/datacouch">on Github</a>
+      </p>
+    </div>
 
-  <section id="examples">
-    <div class="page-header">
-      <h1>
-        How it works
-        <small>
-          if you have some data you want to share
-        </small>
-      </h1>
-    </div>
-    <!-- Fixed layout -->
-    <div class="row">
-      <div class="span4 columns">
-        <h2>
-          Upload data
-        </h2>
-        <p>
-          You can upload CSV files or JSON data using a few different methods.
-        </p>
+    <section id="examples">
+      <div class="page-header">
+        <h1>
+          How it works
+          <small>
+            if you have some data you want to share
+          </small>
+        </h1>
       </div>
-      <div class="span12 columns">
-        <img class="screenshot" src="images/import-data.png">
+      <!-- Fixed layout -->
+      <div class="row">
+        <div class="span4 columns">
+          <h2>
+            Upload data
+          </h2>
+          <p>
+            You can upload CSV files or JSON data using a few different methods.
+          </p>
+        </div>
+        <div class="span12 columns">
+          <img class="screenshot" src="images/import-data.png">
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="span4 columns">
-        <h2>
-          Refine your data
-        </h2>
-        <p>
-          Use the HTML5 data editor to clean up or add to your dataset.
-        </p>
+      <div class="row">
+        <div class="span4 columns">
+          <h2>
+            Refine your data
+          </h2>
+          <p>
+            Use the HTML5 data editor to clean up or add to your dataset.
+          </p>
+        </div>
+        <div class="span12 columns">
+          <img class="screenshot" src="images/refine-data.png">
+        </div>
       </div>
-      <div class="span12 columns">
-        <img class="screenshot" src="images/refine-data.png">
+      <div class="row">
+        <div class="span4 columns">
+          <h2>
+            Share & visualize
+          </h2>
+          <p>
+            Build HTML5 apps using the in-browser editor or consume data from the API.
+          </p>
+        </div>
+        <div class="span12 columns">
+          <img class="screenshot" src="images/visualize-data.png">
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="span4 columns">
-        <h2>
-          Share & visualize
-        </h2>
-        <p>
-          Build HTML5 apps using the in-browser editor or consume data from the API.
-        </p>
-      </div>
-      <div class="span12 columns">
-        <img class="screenshot" src="images/visualize-data.png">
-      </div>
-    </div>
-  </section>
+    </section>
   </div>
   
   <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
