--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -54,6 +54,11 @@
     </div>
   </div>
   
+  <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
+  <div class="dialog" style="display: none">
+    <div class="modal" style="position: relative; top: 50px; left: auto; margin: 0 auto; z-index: 102"></div>
+  </div>
+  
   <script type="text/mustache" class="welcomeTemplate">
     <div class="userControls"></div>
   
@@ -129,11 +134,6 @@
         </div>
       </section>
     </div>
-  
-    <div class="dialog-overlay" style="display: none; z-index: 101; ">&nbsp;</div>
-    <div class="dialog" style="display: none">
-      <div class="modal" style="position: relative; top: 50px; left: auto; margin: 0 auto; z-index: 102"></div>
-    </div>
   </script>
   
   <script type="text/mustache" class="emptyTemplate">
@@ -180,15 +180,18 @@
           <span class="separator"> — </span>
           <span class="lightest_gray">collaborative data</span>
           <div class="userControls"></div>
-          <div class="userButtons"></div>
         </div>
         <div class="showbar" id="showbar">
-          <div id="showbarItems"></div>
+          <div id="showbarItems">
+            <div class="userButtons"></div>
+          </div>
         </div>
       </div>
       <div id="wrapper">
         <div id="left"></div>
         <div id="right">
+          <div class="datasetsContainer"></div>
+          <div class="trendingDatasetsContainer"></div>
         </div>
       </div>
     </div>
@@ -311,31 +314,31 @@
   
   
   <script type="text/mustache" class="datasetsTemplate">
-  {{^datasets}}<center><h1>{{name}} doesn't have any datasets yet!</h1></center>{{/datasets}}
-  <h2>{{name}}</h2>
-  <ol class="datasets detailed">
-  {{#datasets}}
-    <li>
-    <div class="name">
-      <a class="owner" href="#/{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit/#/{{id}}">{{name}}</a>
-      {{#nouns}}
-      <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
-      {{/nouns}}
-    </div>
-    <div class="forkedFrom">
-      {{#forkedFrom}}
-      <span><span class="fork icon"></span>forked from <a href="#/{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="#/{{forkedFrom}}">{{name}}</a></span>
-      {{/forkedFrom}}
-    </div>
-    <div class="metadata subtitle">Created <span class="timeago" title="{{date}}"></span>, {{count}} documents, {{size}}</div>
-    <div class="avatar"><a href="#/{{user}}"><img src="{{#avatar}}{{.}}{{/avatar}}{{^avatar}}images/avatar_default.png{{/avatar}}"></a></div>
-    {{#description}}<div><p>{{description}}</p></div>{{/description}}
-    <div class="datasetActions">
-      {{#loggedIn}}<a href="#/fork/{{id}}!" class="btn secondary small"><span class="fork icon"></span>Fork dataset</a>{{/loggedIn}}
-    </div>
-    </li>
-  {{/datasets}}
-  </ol>
+    {{^datasets}}<center><h1>{{name}} doesn't have any datasets yet!</h1></center>{{/datasets}}
+    <h2>{{name}}</h2>
+    <ol class="datasets detailed">
+    {{#datasets}}
+      <li>
+      <div class="name">
+        <a class="owner" href="#/{{user}}">{{user}}</a>&nbsp;/ <a class="dataset" href="edit/#/{{id}}">{{name}}</a>
+        {{#nouns}}
+        <a href="http://thenounproject.com/noun/{{noun}}/">{{{svg}}}</a>
+        {{/nouns}}
+      </div>
+      <div class="forkedFrom">
+        {{#forkedFrom}}
+        <span><span class="fork icon"></span>forked from <a href="#/{{forkedFromUser}}">{{forkedFromUser}}</a>&nbsp;/ <a class="dataset" href="#/{{forkedFrom}}">{{name}}</a></span>
+        {{/forkedFrom}}
+      </div>
+      <div class="metadata subtitle">Created <span class="timeago" title="{{date}}"></span>, {{count}} documents, {{size}}</div>
+      <div class="avatar"><a href="#/{{user}}"><img src="{{#avatar}}{{.}}{{/avatar}}{{^avatar}}images/avatar_default.png{{/avatar}}"></a></div>
+      {{#description}}<div><p>{{description}}</p></div>{{/description}}
+      <div class="datasetActions">
+        {{#loggedIn}}<a href="#/fork/{{id}}!" class="btn secondary small"><span class="fork icon"></span>Fork dataset</a>{{/loggedIn}}
+      </div>
+      </li>
+    {{/datasets}}
+    </ol>
   </script>
   
   <script type="text/mustache" class="noUserTemplate">
