--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -186,11 +186,49 @@
           <div class="userButtons"></div>
         </div>
         <div class="container">
-          <div class="datasetsContainer"></div>
-          <div class="trendingDatasetsContainer"></div>
+          <div class="row">
+            <div class="span7 infoContainer"></div>
+            <div class="span9 datasetsContainer"></div>
+          </div>
         </div>
       </div>
     </div>
+  </script>
+
+  <script type="text/mustache" class="infoTemplate">
+    <h4>
+      Datacouch
+      <code>
+        alpha test!
+      </code>
+    </h4>
+    <p>
+      Thanks for testing Datacouch out. If you have any suggestions feel free to open issues <a href="https://github.com/maxogden/datacouch/issues">on Github</a>.
+    <dl>
+      <dt>
+        Forking & Refining
+      </dt>
+      <dd>
+        You can create new datasets by uplooading CSV/JSON data or fork datasets from other users to your account. You can only edit data in datasets that are under your account. Soon you will be able to submit pull requests back to datasets owners.
+      </dd>
+      <dt>
+        App/Visualization Templates
+      </dt>
+      <dd>
+        From the <code>Applications</code> tab inside a dataset you can install some HTML5 application templates and edit them from your browser. This is pretty half-baked right now and will be improving soon. If you have ideas for useful app templates open an issue on Github with the recommendation!
+      </dd>
+      <dt>
+        Full CouchDB API
+      </dt>
+      <dd>
+        Every dataset is it's own CouchDB database under the ownership of your user account. This means you can take advantage of all the fun real-time sync and replication features offered by CouchDB. There will be API documentation soon but you can get started by using <a href="/api/token">your token</a> to make authenticated requests to any of your datasets via the Couch endpoint: <code>http://datacouch.com/api/couch/database-id-here</code>
+      </dd>
+    </dl>
+  </script>
+  
+  <script type="text/mustache" class="bioTemplate">
+    <img src="{{avatar}}"/>
+    {{_id}}
   </script>
   
   <script type="text/mustache" class="userControlsTemplate">
