change wording from apps to templates

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -54,7 +54,7 @@
   
   <script type='text/mustache' class="appTemplatesTemplate">
     <div class="appTemplates">
-      {{#apps}}<img data-ddoc="{{ddoc}}" src="{{screenshot}}">{{/apps}}
+      {{#templates}}<img data-ddoc="{{ddoc}}" src="{{screenshot}}">{{/templates}}
     </div>
   </script>
 
