rewrite app template backend

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -149,7 +149,7 @@
     <div class="bottom">
       {{#apps}}
         <ul>
-          <li class="root" data-ddoc="{{ddoc}}" id="project"><img src="/images/project.png">{{ddoc}}
+          <li class="root" data-docid="{{docid}}" data-ddoc="{{ddoc}}" id="project"><img src="/images/project.png">{{ddoc}}
           <div id="files">
             <ul>
               <li class="hidden"><img src="/images/ajax-loader.gif">Loading project...
