--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -132,11 +132,11 @@
   
   <script type='text/mustache' class="ddocIframeTemplate">
     <div class="iframeDetails">
-      <span class="title">{{ddoc}}</span> (<a href="{{url}}">permalink</a>)
+      <span class="title">{{ddoc}}</span> (<a href="http://{{url}}">permalink</a>)
     </div>
     <div id="view-panel">
       <div class="iframeContainer">
-        <iframe class="ddocIframe" src="{{url}}"></iframe>
+        <iframe class="ddocIframe" src="http://{{url}}"></iframe>
       </div>
     </div>
   </script>
@@ -149,7 +149,7 @@
     <div class="bottom">
       {{#apps}}
         <ul>
-          <li class="root" data-docid="{{docid}}" data-ddoc="{{ddoc}}" id="project"><img src="/images/project.png">{{ddoc}}
+          <li class="root" data-url="{{url}}" data-ddoc="{{ddoc}}" id="project"><img src="/images/project.png">{{ddoc}}
           <div id="files">
             <ul>
               <li class="hidden"><img src="/images/ajax-loader.gif">Loading project...
