--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -67,6 +67,11 @@
   </script>
   
   <script type='text/mustache' class="actionsTemplate">
+    {{#showForkButton}}
+      <a class="button" href="#/fork/{{db_name}}!">
+        <span class="fork icon"></span><span>Fork dataset</span>
+      </a>
+    {{/showForkButton}}
     <a class="button" data-action="import" href="javascript:{}"><span data-action="import" class="button-menu">Import</span></a>
     <!-- <a class="button" data-action="edit" href="javascript:{}"><span data-action="transform" class="button-menu">Edit</span></a> -->
     <a class="button" data-action="export" href="javascript:{}"><span data-action="export" class="button-menu">Export</span></a>
