--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -72,6 +72,11 @@
         <span class="fork icon"></span><span>Fork dataset</span>
       </a>
     {{/showForkButton}}
+    {{#fork}}
+      <a class="button" href="/edit/#/{{fork}}">
+        <span class="fork icon"></span><span>Your fork</span>
+      </a>
+    {{/fork}}
     <a class="button" data-action="import" href="javascript:{}"><span data-action="import" class="button-menu">Import</span></a>
     <!-- <a class="button" data-action="edit" href="javascript:{}"><span data-action="transform" class="button-menu">Edit</span></a> -->
     <a class="button" data-action="export" href="javascript:{}"><span data-action="export" class="button-menu">Export</span></a>
